##
## SPDX-FileCopyrightText: Copyright © 2024 technosf <https://github.com/technosf>
## SPDX-License-Identifier: GPL-3.0-or-later
##
## @file meson.build
## @brief meson build file for application translations
##
##  This file defines how application translations are extracted for the project:
## - generation of POT template from the application source code
##

message('Application translation extraction...')

i18n.gettext ('application',
  preset: 'glib',
  install: false
)
