## SPDX-FileCopyrightText: Copyright © 2024 technosf <https://github.com/technosf>
## SPDX-License-Identifier: GPL-3.0-or-later
##
## @file meson.build
## @brief meson build file for country-specific translations
##
##  This file defines how country-specific translations are extracted for the project:
## - generation of POT templates for country and language names
##

message('Country translation extraction...')

i18n.gettext ('countries',
  preset: 'glib',
  install: false
)
